# python-cei-crawler

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: pipeline.yml  publish.yml  test.yml
cei_crawler/: __init__.py  backend.py  client.py  constants.py  crawlers.py  exceptions.py  models.py  responses.py
cei_crawler/tests/: test_constants.py  test_models.py
